@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.service.kodi.callbacks" name="Kodi Callbacks" version="0.9.7.5" provider-name="KenV99">
+<addon id="script.service.kodi.callbacks" name="Kodi Callbacks" version="0.9.8" provider-name="KenV99">
   <requires>
     <import addon="xbmc.python" version="2.19.0"/>
     <import addon="script.module.requests" version="2.3.0"/>
