@@ -1,1 +1,1 @@
-{"resources/lib/tests/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/tests/Kodi_stubs/xbmcvfs.py": "2016-01-18T13:18:12Z", "resources/lib/watchdog/observers/polling.py": "2016-01-17T07:10:59Z", "resources/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/publishers/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/pathtools/README.rst": "2016-01-25T10:11:22Z", "resources/lib/taskExample.py": "2016-02-18T06:58:30Z", "resources/lib/pathtools/README": "2016-01-25T10:11:22Z", "resources/skins/Default/720p/DialogTextBox.xml": "2016-01-14T15:24:21Z", "resources/lib/watchdog/utils/delayed_queue.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/utils/dirsnapshot.py": "2016-02-01T11:27:31Z", "resources/lib/tests/Kodi_stubs/xbmcplugin.py": "2016-01-18T13:18:12Z", ".gitignore": "2016-01-14T15:24:21Z", "resources/lib/tests/tstScript.sh": "2016-02-07T07:20:20Z", "resources/lib/utils/xml_gen.py": "2016-02-26T06:59:02Z", "default.py": "2016-02-26T07:12:44Z", "resources/lib/watchdog/LICENSE.txt": "2016-01-25T10:10:48Z", "resources/lib/watchdog/utils/event_backport.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/utils/compat.py": "2016-01-17T07:10:59Z", "resources/lib/publishers/watchdogStartup.py": "2016-02-25T07:28:47Z", "resources/lib/helpers/onQuit.sh": "2016-01-22T14:59:31Z", "resources/lib/pathtools/AUTHORS": "2016-01-25T10:11:22Z", "resources/lib/tasks/taskScript.py": "2016-02-19T06:29:00Z", "resources/lib/tasks/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/publishers/schedule.py": "2016-02-22T06:05:51Z", "resources/lib/tests/testTasks.py": "2016-02-14T17:00:24Z", "resources/lib/pubsub.py": "2016-01-29T06:59:10Z", "icon.png": "2016-01-14T15:24:21Z", "resources/lib/watchdog/observers/__init__.py": "2016-01-19T05:48:22Z", "resources/lib/utils/selector.py": "2016-02-24T14:06:31Z", "resources/language/English/strings.po": "2016-02-26T07:18:55Z", "resources/lib/watchdog/utils/importlib2.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/fsevents.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskHttp.py": "2016-02-07T08:00:22Z", "resources/lib/events.py": "2016-02-17T17:55:34Z", "resources/lib/utils/build.py": "2016-02-22T06:40:51Z", "resources/lib/helpers/onQuit.bat": "2016-01-22T15:00:23Z", "resources/lib/tests/Kodi_stubs/xbmc.py": "2016-02-08T08:29:37Z", "resources/lib/subscriberfactory.py": "2016-02-17T17:55:34Z", "resources/lib/watchdog/AUTHORS": "2016-01-25T10:10:48Z", "resources/lib/utils/detectPath.py": "2016-02-25T08:22:14Z", "resources/lib/publishers/dummy.py": "2016-01-17T07:15:37Z", "resources/lib/kodilogging.py": "2016-02-01T07:15:58Z", "resources/lib/tests/Kodi_stubs/xbmcgui.py": "2016-01-18T13:18:12Z", "resources/lib/tests/Kodi_stubs/xbmcaddon.py": "2016-01-29T06:47:07Z", "resources/lib/pathtools/__init__.py": "2016-01-17T07:10:43Z", "resources/lib/watchdog/observers/inotify_c.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/tricks/__init__.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/version.py": "2016-01-17T07:10:59Z", "resources/lib/helpers/sudohelper.sh": "2016-01-28T07:46:47Z", "resources/settings.xml": "2016-02-26T07:19:15Z", "resources/lib/tests/testUpdate.py": "2016-02-25T08:19:48Z", "resources/lib/watchdog/utils/bricks.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskPython.py": "2016-02-25T07:13:17Z", "resources/lib/publishers/loop.py": "2016-01-31T14:56:07Z", "timestamp.json": "2016-02-26T07:20:47Z", "testme.py": "2016-01-27T17:12:23Z", "resources/lib/utils/githubtools.py": "2016-02-22T06:40:51Z", "Thumbs.db": "2016-02-25T06:38:07Z", "resources/lib/utils/updateaddon.py": "2016-02-21T18:13:59Z", "resources/lib/tests/testPo.py": "2016-02-22T06:40:51Z", "resources/lib/pubsub_example.py": "2016-01-27T09:01:06Z", "resources/lib/watchdog/utils/unicode_paths.py": "2016-01-17T07:10:59Z", "resources/lib/publisherfactory.py": "2016-02-17T17:55:34Z", "resources/lib/schedule/__init__.py": "2016-02-25T08:22:14Z", "resources/lib/watchdog/__init__.py": "2016-01-17T07:10:59Z", "addon.xml": "2016-02-18T03:38:08Z", "resources/lib/watchdog/utils/platform.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskBuiltin.py": "2016-02-18T06:58:30Z", "README.md": "2016-02-01T07:40:27Z", "resources/lib/pathtools/path.py": "2016-01-17T07:10:43Z", "resources/lib/tests/direct_test.py": "2016-02-19T06:31:22Z", "resources/lib/pathtools/LICENSE.txt": "2016-01-25T10:08:08Z", "resources/lib/watchdog/utils/echo.py": "2016-01-17T07:10:59Z", "resources/lib/tests/Kodi_stubs/__init__.py": "2016-02-01T08:10:33Z", "resources/lib/pathtools/patterns.py": "2016-01-17T07:10:43Z", "resources/lib/publishers/monitor.py": "2016-01-31T07:25:06Z", "resources/lib/watchdog/observers/fsevents2.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/kqueue.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/read_directory_changes.py": "2016-01-17T07:10:59Z", "resources/lib/tests/tstScript.bat": "2016-01-21T17:30:08Z", "resources/lib/utils/__init__.py": "2016-01-24T07:36:06Z", "resources/lib/watchdog/utils/decorators.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/inotify.py": "2016-01-17T07:10:59Z", "resources/lib/utils/poutil.py": "2016-02-26T06:21:47Z", "resources/lib/publishers/player.py": "2016-02-18T06:58:30Z", "resources/lib/tests/tstPythonGlobal.py": "2016-01-21T11:25:01Z", "LICENSE.txt": "2016-01-25T10:16:54Z", "resources/lib/watchdog/observers/winapi.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/events.py": "2016-01-17T07:10:59Z", "changelog.txt": "2016-02-26T07:17:14Z", "resources/lib/watchdog/utils/__init__.py": "2016-02-14T17:00:24Z", "resources/lib/tests/testPublishers.py": "2016-02-22T06:40:51Z", "resources/lib/watchdog/watchmedo.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/README.rst": "2016-01-25T10:10:48Z", "resources/lib/pathtools/version.py": "2016-01-17T07:10:43Z", "resources/lib/publishers/log.py": "2016-02-25T07:28:48Z", "resources/lib/utils/copyToDir.py": "2016-02-25T08:22:14Z", "resources/lib/watchdog/observers/inotify_buffer.py": "2016-01-17T07:10:59Z", "fanart.jpg": "2016-02-25T06:55:18Z", "resources/lib/utils/kodipathtools.py": "2016-02-25T07:28:48Z", "resources/lib/kodinotify.py": "2016-01-14T15:24:21Z", "resources/lib/watchdog/utils/win32stat.py": "2016-01-17T07:10:59Z", "resources/lib/publishers/watchdog.py": "2016-02-25T07:28:48Z", "resources/lib/dialogtb.py": "2016-02-18T06:58:30Z", "resources/lib/settings.py": "2016-02-26T06:54:28Z", "restartaddon.py": "2016-02-13T15:07:18Z", "resources/lib/watchdog/observers/api.py": "2016-01-17T07:10:59Z", "resources/lib/taskABC.py": "2016-01-30T06:42:33Z", "resources/lib/__init__.py": "2016-01-27T17:37:46Z", ".gitattributes": "2016-01-14T15:24:21Z", "resources/lib/watchdog/COPYING": "2016-01-25T10:10:48Z"}
+{"resources/lib/tests/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/tests/Kodi_stubs/xbmcvfs.py": "2016-01-18T13:18:12Z", "resources/lib/watchdog/observers/polling.py": "2016-01-17T07:10:59Z", "resources/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/publishers/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/pathtools/README.rst": "2016-01-25T10:11:22Z", "resources/lib/taskExample.py": "2016-02-26T13:45:19Z", "resources/lib/pathtools/README": "2016-01-25T10:11:22Z", "resources/skins/Default/720p/DialogTextBox.xml": "2016-01-14T15:24:21Z", "resources/lib/watchdog/utils/delayed_queue.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/utils/dirsnapshot.py": "2016-02-01T11:27:31Z", "resources/lib/tests/Kodi_stubs/xbmcplugin.py": "2016-01-18T13:18:12Z", ".gitignore": "2016-01-14T15:24:21Z", "resources/lib/tests/tstScript.sh": "2016-02-07T07:20:20Z", "resources/lib/utils/xml_gen.py": "2016-02-26T13:45:25Z", "default.py": "2016-02-26T13:45:25Z", "resources/lib/watchdog/LICENSE.txt": "2016-01-25T10:10:48Z", "resources/lib/watchdog/utils/event_backport.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/utils/compat.py": "2016-01-17T07:10:59Z", "resources/lib/publishers/watchdogStartup.py": "2016-02-26T13:45:25Z", "resources/lib/helpers/onQuit.sh": "2016-01-22T14:59:31Z", "resources/lib/pathtools/AUTHORS": "2016-01-25T10:11:22Z", "resources/lib/tasks/taskScript.py": "2016-02-26T13:45:23Z", "resources/lib/tasks/__init__.py": "2016-01-14T15:24:21Z", "resources/lib/publishers/schedule.py": "2016-02-26T13:45:23Z", "resources/lib/tests/testTasks.py": "2016-02-14T17:00:24Z", "resources/lib/pubsub.py": "2016-01-29T06:59:10Z", "icon.png": "2016-01-14T15:24:21Z", "resources/lib/watchdog/observers/__init__.py": "2016-01-19T05:48:22Z", "resources/lib/utils/selector.py": "2016-02-26T13:45:25Z", "resources/language/English/strings.po": "2016-02-26T14:44:58Z", "resources/lib/watchdog/utils/importlib2.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/fsevents.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskHttp.py": "2016-02-07T08:00:22Z", "resources/lib/events.py": "2016-02-26T13:45:16Z", "resources/lib/utils/build.py": "2016-02-22T06:40:51Z", "resources/lib/helpers/onQuit.bat": "2016-01-22T15:00:23Z", "resources/lib/tests/Kodi_stubs/xbmc.py": "2016-02-08T08:29:37Z", "resources/lib/subscriberfactory.py": "2016-02-26T13:45:16Z", "resources/lib/watchdog/AUTHORS": "2016-01-25T10:10:48Z", "resources/lib/utils/detectPath.py": "2016-02-26T13:45:25Z", "resources/lib/publishers/dummy.py": "2016-01-17T07:15:37Z", "resources/lib/kodilogging.py": "2016-02-01T07:15:58Z", "resources/lib/tests/Kodi_stubs/xbmcgui.py": "2016-01-18T13:18:12Z", "resources/lib/tests/Kodi_stubs/xbmcaddon.py": "2016-01-29T06:47:07Z", "resources/lib/pathtools/__init__.py": "2016-01-17T07:10:43Z", "resources/lib/watchdog/observers/inotify_c.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/tricks/__init__.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/version.py": "2016-01-17T07:10:59Z", "resources/lib/helpers/sudohelper.sh": "2016-01-28T07:46:47Z", "resources/settings.xml": "2016-02-26T14:44:58Z", "resources/lib/tests/testUpdate.py": "2016-02-26T13:45:25Z", "resources/lib/watchdog/utils/bricks.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskPython.py": "2016-02-26T13:45:25Z", "resources/lib/publishers/loop.py": "2016-01-31T14:56:07Z", "timestamp.json": "2016-02-26T14:45:40Z", "testme.py": "2016-01-27T17:12:23Z", "resources/lib/utils/githubtools.py": "2016-02-26T13:45:25Z", "Thumbs.db": "2016-02-25T06:38:07Z", "resources/lib/utils/updateaddon.py": "2016-02-26T13:45:23Z", "resources/lib/tests/testPo.py": "2016-02-26T13:45:23Z", "resources/lib/pubsub_example.py": "2016-01-27T09:01:06Z", "resources/lib/watchdog/utils/unicode_paths.py": "2016-01-17T07:10:59Z", "resources/lib/publisherfactory.py": "2016-02-26T13:45:16Z", "resources/lib/schedule/__init__.py": "2016-02-26T13:45:25Z", "resources/lib/watchdog/__init__.py": "2016-01-17T07:10:59Z", "addon.xml": "2016-02-26T13:51:30Z", "resources/lib/watchdog/utils/platform.py": "2016-01-17T07:10:59Z", "resources/lib/tasks/taskBuiltin.py": "2016-02-26T13:45:19Z", "README.md": "2016-02-01T07:40:27Z", "resources/lib/pathtools/path.py": "2016-01-17T07:10:43Z", "resources/lib/tests/direct_test.py": "2016-02-26T13:45:23Z", "resources/lib/pathtools/LICENSE.txt": "2016-01-25T10:08:08Z", "resources/lib/watchdog/utils/echo.py": "2016-01-17T07:10:59Z", "resources/lib/tests/Kodi_stubs/__init__.py": "2016-02-01T08:10:33Z", "resources/lib/pathtools/patterns.py": "2016-01-17T07:10:43Z", "resources/lib/publishers/monitor.py": "2016-01-31T07:25:06Z", "resources/lib/watchdog/observers/fsevents2.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/kqueue.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/read_directory_changes.py": "2016-01-17T07:10:59Z", "resources/lib/tests/tstScript.bat": "2016-01-21T17:30:08Z", "resources/lib/utils/__init__.py": "2016-01-24T07:36:06Z", "resources/lib/watchdog/utils/decorators.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/observers/inotify.py": "2016-01-17T07:10:59Z", "resources/lib/utils/poutil.py": "2016-02-26T13:45:25Z", "resources/lib/publishers/player.py": "2016-02-26T13:45:19Z", "resources/lib/tests/tstPythonGlobal.py": "2016-01-21T11:25:01Z", "LICENSE.txt": "2016-01-25T10:16:54Z", "resources/lib/watchdog/observers/winapi.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/events.py": "2016-01-17T07:10:59Z", "changelog.txt": "2016-02-26T13:51:30Z", "resources/lib/watchdog/utils/__init__.py": "2016-02-14T17:00:24Z", "resources/lib/tests/testPublishers.py": "2016-02-26T13:45:23Z", "resources/lib/watchdog/watchmedo.py": "2016-01-17T07:10:59Z", "resources/lib/watchdog/README.rst": "2016-01-25T10:10:48Z", "resources/lib/pathtools/version.py": "2016-01-17T07:10:43Z", "resources/lib/publishers/log.py": "2016-02-26T13:45:25Z", "resources/lib/utils/copyToDir.py": "2016-02-26T13:45:25Z", "resources/lib/watchdog/observers/inotify_buffer.py": "2016-01-17T07:10:59Z", "fanart.jpg": "2016-02-26T13:45:25Z", "resources/lib/utils/kodipathtools.py": "2016-02-26T13:45:25Z", "resources/lib/kodinotify.py": "2016-01-14T15:24:21Z", "resources/lib/watchdog/utils/win32stat.py": "2016-01-17T07:10:59Z", "resources/lib/publishers/watchdog.py": "2016-02-26T13:45:25Z", "resources/lib/dialogtb.py": "2016-02-26T13:45:19Z", "resources/lib/settings.py": "2016-02-26T13:45:25Z", "restartaddon.py": "2016-02-13T15:07:18Z", "resources/lib/watchdog/observers/api.py": "2016-01-17T07:10:59Z", "resources/lib/taskABC.py": "2016-01-30T06:42:33Z", "resources/lib/__init__.py": "2016-01-27T17:37:46Z", ".gitattributes": "2016-01-14T15:24:21Z", "resources/lib/watchdog/COPYING": "2016-01-25T10:10:48Z"}
